[gd_scene load_steps=13 format=3 uid="uid://b64rp4jgyoa7r"]

[ext_resource type="Script" path="res://game/entities/ui/e_level_intro.gd" id="1_hecmk"]
[ext_resource type="Script" path="res://addons/gecs/component.gd" id="2_kiw6c"]
[ext_resource type="Script" path="res://game/components/ui/c_ui_visiblity.gd" id="3_2iuy8"]
[ext_resource type="Script" path="res://game/components/ui/c_main_menu.gd" id="4_epm3m"]
[ext_resource type="Theme" uid="uid://ck7vy3altix2h" path="res://game/assets/themes/zamn-font.tres" id="5_7qwbr"]
[ext_resource type="FontFile" uid="uid://cs3q1u0vc4jhn" path="res://game/assets/fonts/FEASFBI_.TTF" id="6_cj4jg"]
[ext_resource type="AudioStream" uid="uid://bxahi1w2sb4rj" path="res://addons/kenney impact sounds/impact_wood_heavy_004.ogg" id="7_bijvk"]

[sub_resource type="Resource" id="Resource_q805j"]
script = ExtResource("3_2iuy8")

[sub_resource type="Resource" id="Resource_f8576"]
script = ExtResource("4_epm3m")

[sub_resource type="Animation" id="Animation_xrgr0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Wrapper/LevelNumber:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 280)]
}

[sub_resource type="Animation" id="Animation_xelxm"]
resource_name = "fall"
length = 7.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Wrapper/LevelNumber:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.966667, 2, 3),
"transitions": PackedFloat32Array(5.65685, 0.233258, 2.54912, 0.153893),
"update": 0,
"values": [Vector2(0, -200), Vector2(0, 280), Vector2(0, 280), Vector2(0, 1500)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/Wrapper/LevelTitle:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(3, 3.96667, 5.96667, 7),
"transitions": PackedFloat32Array(4.92457, 1, 4.75684, 1),
"update": 0,
"values": [Vector2(0, -400), Vector2(0, 400), Vector2(0, 150), Vector2(0, 1500)]
}
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudioStreamPlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("7_bijvk")
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("7_bijvk")
}],
"times": PackedFloat32Array(1, 3.96667)
}
tracks/2/use_blend = true

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nx1h6"]
_data = {
&"RESET": SubResource("Animation_xrgr0"),
&"fall": SubResource("Animation_xelxm")
}

[node name="LevelIntroUI" type="Node2D"]
script = ExtResource("1_hecmk")
component_resources = Array[ExtResource("2_kiw6c")]([SubResource("Resource_q805j"), SubResource("Resource_f8576")])

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="Wrapper" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BG" type="ColorRect" parent="CanvasLayer/Wrapper"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0941176, 0.0941176, 0.0941176, 1)

[node name="LevelTitle" type="RichTextLabel" parent="CanvasLayer/Wrapper"]
unique_name_in_owner = true
custom_minimum_size = Vector2(1000, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -123.0
offset_right = 500.0
offset_bottom = 123.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_7qwbr")
theme_override_colors/default_color = Color(0, 0.517647, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_outline_size = 12
theme_override_fonts/normal_font = ExtResource("6_cj4jg")
theme_override_font_sizes/normal_font_size = 80
text = "A Month 
of 
Mundane Rage"
fit_content = true
horizontal_alignment = 1

[node name="LevelNumber" type="RichTextLabel" parent="CanvasLayer/Wrapper"]
unique_name_in_owner = true
clip_contents = false
custom_minimum_size = Vector2(1000, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -260.0
offset_right = 40.0
offset_bottom = -172.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_7qwbr")
theme_override_colors/default_color = Color(0, 0.517647, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_outline_size = 12
theme_override_fonts/normal_font = ExtResource("6_cj4jg")
theme_override_font_sizes/normal_font_size = 85
text = "Level One"
fit_content = true
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_nx1h6")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
pitch_scale = 0.37

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
